--- a/notebooks/2_Predict_Engagement_Internet_News.ipynb
+++ b/notebooks/2_Predict_Engagement_Internet_News.ipynb
@@ -1151,10 +1151,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can get a ROC-AUC as high as 86% in the testing set, which is very decent, I would even say it's good!\n",
-    "Instead of picking the best model, I'd rather go with model from Trial #9 though, as it overfits a little bit less (still seems to overfit though) and sacrifices a bit of Precision but improves Recall a lot.\n",
+    "We can get a ROC-AUC as high as 87% in the testing set, which is very decent, I would even say it's good!\n",
     "\n",
-    "I would prefer for this case to value Precision over Recall. That is, I prefer my model to be right most of the times when it says that an article will be ignored, and don't mind as much if it predicts that it will be ignored but in the end it's not (which is what Recall measures). But since we can increase Recall 20% by sacrificing 10% on Precision and still be on 74% on the latter, I make this decision."
+    "I would prefer for this case to value Precision over Recall. That is, I prefer my model to be right most of the times when it says that an article will be ignored, and don't mind as much if it predicts that it will be ignored but in the end it's not (which is what Recall measures)."
    ]
   },
   {
@@ -1413,23 +1412,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 282,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8079295154185022"
-      ]
-     },
-     "execution_count": 282,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "predictions.correct.mean()"
+    "We make the right prediction in all 10 examples that were randomly sampled."
    ]
   },
   {
